--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!-- 404.html -->
+<!-- 404 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,6 +31,6 @@
 <body>
   <h1>Oops! Page Not Found</h1>
   <p>The page you're looking for doesn't exist or has been moved.</p>
-  <a href="index.html" class="btn-home">Go Back Home</a>
+  <a href="index" class="btn-home">Go Back Home</a>
 </body>
 </html>
