--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
 <header class="bg-black text-white">
   <nav class="navbar navbar-dark container-fluid">
     <div class="container-fluid d-flex justify-content-between align-items-center">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="index">
         <img src="assets/wix.png" alt="Wix Logo" width="100" height="50">
       </a>
       <button class="btn btn-outline-light" onclick="history.back()">← Back</button>
@@ -110,11 +110,11 @@
       <img src="assets/wix.png" alt="WiXnation Logo" width="120">
     </div>
     <ul class="nav justify-content-center mb-3">
-      <li class="nav-item"><a href="index.html" class="nav-link text-white-50 px-3">Home</a></li>
-      <li class="nav-item"><a href="about-us.html" class="nav-link text-white-50 px-3">About</a></li>
-      <li class="nav-item"><a href="policy.html" class="nav-link text-white-50 px-3">Policy</a></li>
-      <li class="nav-item"><a href="service.html" class="nav-link text-white-50 px-3">Service</a></li>
-      <li class="nav-item"><a href="contact.html" class="nav-link text-white-50 px-3">Contact</a></li>
+      <li class="nav-item"><a href="index" class="nav-link text-white-50 px-3">Home</a></li>
+      <li class="nav-item"><a href="about-us" class="nav-link text-white-50 px-3">About</a></li>
+      <li class="nav-item"><a href="policy" class="nav-link text-white-50 px-3">Policy</a></li>
+      <li class="nav-item"><a href="service" class="nav-link text-white-50 px-3">Service</a></li>
+      <li class="nav-item"><a href="contact" class="nav-link text-white-50 px-3">Contact</a></li>
     </ul>
     <small class="text-white-50">&copy; <span id="year"></span> WiXnation Football Scraper. All rights reserved.</small>
   </div>
