--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav text-center">
-            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="policy.html">Policy</a></li>
-            <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link active" href="index">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="about-us">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="policy">Policy</a></li>
+            <li class="nav-item"><a class="nav-link" href="service">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -407,19 +407,19 @@
     <!-- Footer Navigation -->
     <ul class="nav justify-content-center mb-4">
       <li class="nav-item">
-        <a href="index.html" class="nav-link px-3 text-white-50">Home</a>
+        <a href="index" class="nav-link px-3 text-white-50">Home</a>
       </li>
       <li class="nav-item">
-        <a href="about-us.html" class="nav-link px-3 text-white-50">About</a>
+        <a href="about-us" class="nav-link px-3 text-white-50">About</a>
       </li>
       <li class="nav-item">
-        <a href="policy.html" class="nav-link px-3 text-white-50">Policy</a>
+        <a href="policy" class="nav-link px-3 text-white-50">Policy</a>
       </li>
       <li class="nav-item">
-        <a href="service.html" class="nav-link px-3 text-white-50">Service</a>
+        <a href="service" class="nav-link px-3 text-white-50">Service</a>
       </li>
       <li class="nav-item">
-        <a href="contact.html" class="nav-link px-3 text-white-50">Contact</a>
+        <a href="contact" class="nav-link px-3 text-white-50">Contact</a>
       </li>
     </ul>
 
