--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <meta property="og:url" content="https://wixnation.com/">
 <meta property="og:title" content="WiXnation | Football Scraper & Match Predictor">
 <meta property="og:description" content="Analyze football fixtures, scrape live data, and make smart predictions with WiXnation’s utility.">
-<meta property="og:image" content="https://wixnation.com/assets/wix.jpg">
+<meta property="og:image" content="https://wixnation.com/assets/wix.png">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://wixnation.com/">
 <meta name="twitter:title" content="WiXnation | Football Scraper & Predictor">
 <meta name="twitter:description" content="Scrape, analyze and predict football matches using WiXnation’s advanced data tool.">
-<meta name="twitter:image" content="https://wixnation.com/assets/wix.jpg">
+<meta name="twitter:image" content="https://wixnation.com/assets/wix.png">
 
 <!-- Robots & Indexing -->
 <meta name="robots" content="index, follow">
